k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: realtime-chat-service
  namespace: default
spec:
  selector:
    app: realtime-chat
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3003
  type: ClusterIP
